[package]
name = "adf4351"
version = "0.1.0"
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
edition = "2018"
repository = "https://github.com/andreyk0/adf4351-rs"
license = "MIT OR Apache-2.0"
description = "Analog Devices ADF4351 HAL driver"
readme = "README.md"
keywords = ["frequency", "generator", "embedded", "hal", "adf4351", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/andreyk0/adf4351-rs"
documentation = "https://docs.rs/adf4351"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "0.2.4"
nb = "1.0.0"

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"

[dev-dependencies.stm32f4]
version = "0.12.1"
features = ["stm32f407", "rt"]

[dev-dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["stm32f407", "rt"]


[profile.dev]
codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# enable debugging in dev mode.
debug = true

# link with link time optimization (lto).
# NOTE: setting this to true upsets GDB, there's a bug somewhere
lto = false

[profile.release]

codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# link with link time optimization (lto).
lto = true

# no debug info
debug = false
